syntax = "proto3";
package NYql.Connector.App.Config;

import "ydb/library/yql/providers/generic/connector/api/common/data_source.proto";
import "ydb/library/yql/providers/generic/connector/api/common/endpoint.proto";

option go_package = "github.com/ydb-platform/fq-connector-go/app/config";

// Connector client configuration
message TClientConfig {
    // Connector service instance network address we connect to
    NYql.NConnector.NApi.TEndpoint endpoint = 1;
    // TLS credentials for Connector
    TClientTLSConfig tls = 2;
    // Data source instance we read data from
    NYql.NConnector.NApi.TDataSourceInstance data_source_instance = 3;
}

message TClientTLSConfig {
    // CA certificate path
    string ca = 1;
}
